@@ -68,12 +68,12 @@
 			  <child>
 			    <widget class="GtkImageMenuItem" id="reload_plugins">
 			      <property name="visible">True</property>
-			      <property name="label" translatable="yes">reload_plugins</property>
+			      <property name="label" translatable="yes">reload plugins</property>
 			      <property name="use_underline">True</property>
 			      <signal name="activate" handler="on_reload_plugins_activate" last_modification_time="Sun, 04 Jun 2006 17:10:12 GMT"/>
 
 			      <child internal-child="image">
-				<widget class="GtkImage" id="image350">
+				<widget class="GtkImage" id="image353">
 				  <property name="visible">True</property>
 				  <property name="stock">gtk-refresh</property>
 				  <property name="icon_size">1</property>
@@ -89,9 +89,30 @@
 			  <child>
 			    <widget class="GtkMenuItem" id="reread_config">
 			      <property name="visible">True</property>
-			      <property name="label" translatable="yes">reread config</property>
+			      <property name="label" translatable="yes">reload config</property>
 			      <property name="use_underline">True</property>
 			      <signal name="activate" handler="on_reread_config_activate" last_modification_time="Sat, 12 Aug 2006 17:43:22 GMT"/>
+			    </widget>
+			  </child>
+
+			  <child>
+			    <widget class="GtkImageMenuItem" id="reload_self">
+			      <property name="visible">True</property>
+			      <property name="label" translatable="yes">reload self</property>
+			      <property name="use_underline">True</property>
+			      <signal name="activate" handler="on_reload_self_activate" last_modification_time="Sun, 13 Aug 2006 14:55:18 GMT"/>
+
+			      <child internal-child="image">
+				<widget class="GtkImage" id="image354">
+				  <property name="visible">True</property>
+				  <property name="stock">gtk-refresh</property>
+				  <property name="icon_size">1</property>
+				  <property name="xalign">0.5</property>
+				  <property name="yalign">0.5</property>
+				  <property name="xpad">0</property>
+				  <property name="ypad">0</property>
+				</widget>
+			      </child>
 			    </widget>
 			  </child>
 
@@ -109,7 +130,7 @@
 			      <signal name="activate" handler="on_save_workspace_activate" last_modification_time="Wed, 01 Mar 2006 20:17:29 GMT"/>
 
 			      <child internal-child="image">
-				<widget class="GtkImage" id="image351">
+				<widget class="GtkImage" id="image355">
 				  <property name="visible">True</property>
 				  <property name="stock">gtk-save-as</property>
 				  <property name="icon_size">1</property>
@@ -130,7 +151,7 @@
 			      <signal name="activate" handler="on_restore_workspace_activate" last_modification_time="Wed, 01 Mar 2006 20:17:29 GMT"/>
 
 			      <child internal-child="image">
-				<widget class="GtkImage" id="image352">
+				<widget class="GtkImage" id="image356">
 				  <property name="visible">True</property>
 				  <property name="stock">gtk-open</property>
 				  <property name="icon_size">1</property>
@@ -185,7 +206,7 @@
 			      <signal name="activate" handler="on_changelog_activate" last_modification_time="Sat, 12 Nov 2005 23:41:31 GMT"/>
 
 			      <child internal-child="image">
-				<widget class="GtkImage" id="image353">
+				<widget class="GtkImage" id="image357">
 				  <property name="visible">True</property>
 				  <property name="stock">gtk-about</property>
 				  <property name="icon_size">1</property>
